--- a/clockFile/clockFile.csproj
+++ b/clockFile/clockFile.csproj
@@ -59,7 +59,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="email\EmailSender.cs" />
-    <Compile Include="email\SuccessEmailSender.cs" />
+    <Compile Include="email\InformEmailSender.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
